--- a/ush/fv3_config.yaml
+++ b/ush/fv3_config.yaml
@@ -1,73 +1,87 @@
 timevars:
-  yyyymmddhh: '{{ cycle.strftime("%Y%m%d%H) }}'
-  hh: '{{ cycle.strftime("%H) }}'
+  yyyymmddhh: '{{ cycle.strftime("%Y%m%d%H") }}'
+  hh: '{{ cycle.strftime("%H") }}'
 user:
-  rrfs_workflow_app: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfs-workflow/
+  rrfs_workflow_app: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfs-workflow
   physics_suite: FV3_HRRR_gf
+  cycle_int: !timedelta 1
+platform:
+  fix_lam: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfsx/v0.3.2/rrfs_conus_13km/fix_lam
+  fix_am: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfsx/v0.3.2/rrfs_conus_13km/fix_am
 forecast_prod:
-  fv3:
+  fv3: &fv3_config
     diag_table:
       template_file: "{{ user.rrfs_workflow_app }}/parm/diag_table.{{ user.physics_suite }}"
       template_values:
         cres: C775
+        starttime: !datetime "{{ cycle }}"
     domain: regional
     execution:
       batchargs:
-        nodes: 5
-        tasks_per_node: 20
+        nodes: 4
+        tasks_per_node: 21
         walltime: "00:45:00"
+      envcmds:
+        - ulimit -s unlimited
+        - module use /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfs-workflow/modulefiles
+        - module load build_hera_intel
       executable: "{{ user.rrfs_workflow_app }}/exec/ufs_model"
       mpiargs:
         - "--export=ALL"
+        - "--mem=0"
       mpicmd: srun
       threads: 1
     field_table:
       base_file: "{{ user.rrfs_workflow_app }}/parm/field_table.{{ user.physics_suite }}"
-    files_to_copy:
-      INPUT/gfs_ctrl.nc: rrfs_a.t{{ timevars.hh }}z.gfs_ctrl.nc
-      INPUT/gfs_data.nc: rrfs_a.t{{ timevars.hh }}z.gfs_data.tile7.halo0.nc'
-      INPUT/sfc_data.nc: rrfs_a.t{{ timevars.hh }}z.sfc_data.tile7.halo0.nc'
+    files_to_copy: &files_to_copy
+      INPUT/gfs_ctrl.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/input_data/ics/gfs_ctrl.nc
+      INPUT/gfs_data.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/input_data/ics/out.atm.tile7.nc
+      INPUT/sfc_data.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/input_data/ics/out.sfc.tile7.nc
+      ufs.configure: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfs-workflow/parm/ufs.configure
+      fd_ufs.yaml: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfsx/v0.3.2/rrfs_conus_13km/fd_ufs.yaml
     files_to_link:
-      INPUT/grid_spec.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfsx/v0.3.2/rrfs_conus_13km/fix_lam/C775.mosaic.halo3.nc
+      INPUT/grid_spec.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfsx/v0.3.2/rrfs_conus_13km/fix_lam/C775_mosaic.halo3.nc
       INPUT/grid.tile7.halo4.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfsx/v0.3.2/rrfs_conus_13km/fix_lam/C775_grid.tile7.halo4.nc
       INPUT/C775_grid.tile7.halo3.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfsx/v0.3.2/rrfs_conus_13km/fix_lam/C775_grid.tile7.halo3.nc
       INPUT/oro_data.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfsx/v0.3.2/rrfs_conus_13km/fix_lam/C775_oro_data.tile7.halo0.nc
       INPUT/oro_data.tile7.halo4.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfsx/v0.3.2/rrfs_conus_13km/fix_lam/C775_oro_data.tile7.halo4.nc
-      INPUT/oro_data_ls.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfsx/v0.3.2/rrfs_conus_13km/fix_lam/C775_oro_data_ls.tile7.halo{{ constants.NH0 }}.nc
-      INPUT/oro_data_ss.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfsx/v0.3.2/rrfs_conus_13km/fix_lam/C775_oro_data_ss.tile7.halo{{ constants.NH0 }}.nc
-      aerosol.dat: '{{ workflow.FIXam }}/global_climaeropac_global.txt'
-      co2historicaldata_2010.txt: '{{ workflow.FIXam }}/fix_co2_proj/global_co2historicaldata_2010.txt'
-      co2historicaldata_2011.txt: '{{ workflow.FIXam }}/fix_co2_proj/global_co2historicaldata_2011.txt'
-      co2historicaldata_2012.txt: '{{ workflow.FIXam }}/fix_co2_proj/global_co2historicaldata_2012.txt'
-      co2historicaldata_2013.txt: '{{ workflow.FIXam }}/fix_co2_proj/global_co2historicaldata_2013.txt'
-      co2historicaldata_2014.txt: '{{ workflow.FIXam }}/fix_co2_proj/global_co2historicaldata_2014.txt'
-      co2historicaldata_2015.txt: '{{ workflow.FIXam }}/fix_co2_proj/global_co2historicaldata_2015.txt'
-      co2historicaldata_2016.txt: '{{ workflow.FIXam }}/fix_co2_proj/global_co2historicaldata_2016.txt'
-      co2historicaldata_2017.txt: '{{ workflow.FIXam }}/fix_co2_proj/global_co2historicaldata_2017.txt'
-      co2historicaldata_2018.txt: '{{ workflow.FIXam }}/fix_co2_proj/global_co2historicaldata_2018.txt'
-      co2historicaldata_2019.txt: '{{ workflow.FIXam }}/fix_co2_proj/global_co2historicaldata_2019.txt'
-      co2historicaldata_2020.txt: '{{ workflow.FIXam }}/fix_co2_proj/global_co2historicaldata_2020.txt'
-      co2historicaldata_2021.txt: '{{ workflow.FIXam }}/fix_co2_proj/global_co2historicaldata_2021.txt'
-      co2historicaldata_glob.txt: '{{ workflow.FIXam }}/global_co2historicaldata_glob.txt'
-      co2monthlycyc.txt: '{{ workflow.FIXam }}/co2monthlycyc.txt'
-      global_h2oprdlos.f77: '{{ workflow.FIXam }}/global_h2o_pltc.f77'
-      global_albedo4.1x1.grb: '{{ workflow.FIXam }}/global_albedo4.1x1.grb'
-      global_zorclim.1x1.grb: '{{ workflow.FIXam }}/global_zorclim.1x1.grb'
-      global_tg3clim.2.6x1.5.grb: '{{ workflow.FIXam }}/global_tg3clim.2.6x1.5.grb'
-      sfc_emissivity_idx.txt: '{{ workflow.FIXam }}/global_sfc_emissivity_idx.txt'
-      solarconstant_noaa_an.txt: '{{ workflow.FIXam }}/global_solarconstant_noaa_an.txt'
-      global_o3prdlos.f77: '{{ workflow.FIXam }}/ozprdlos_2015_new_sbuvO3_tclm15_nuchem.f77'
-      CCN_ACTIVATE.BIN:
-      freezeH2O.dat:
-      qr_acr_qg.dat:
-      qr_acr_qgV2.dat:
-      qr_acr_qs.dat:
-      qr_acr_qsV2.dat:
-      Thompson_MP_MONTHLY_CLIMO.nc:
-    lateral_boundary_conditions:
+      INPUT/oro_data_ls.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfsx/v0.3.2/rrfs_conus_13km/fix_lam/C775_oro_data_ls.tile7.halo0.nc
+      INPUT/oro_data_ss.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfsx/v0.3.2/rrfs_conus_13km/fix_lam/C775_oro_data_ss.tile7.halo0.nc
+      aerosol.dat: '{{ platform.fix_am }}/global_climaeropac_global.txt'
+      co2historicaldata_2010.txt: '{{ platform.fix_am }}/fix_co2_proj/global_co2historicaldata_2010.txt'
+      co2historicaldata_2011.txt: '{{ platform.fix_am }}/fix_co2_proj/global_co2historicaldata_2011.txt'
+      co2historicaldata_2012.txt: '{{ platform.fix_am }}/fix_co2_proj/global_co2historicaldata_2012.txt'
+      co2historicaldata_2013.txt: '{{ platform.fix_am }}/fix_co2_proj/global_co2historicaldata_2013.txt'
+      co2historicaldata_2014.txt: '{{ platform.fix_am }}/fix_co2_proj/global_co2historicaldata_2014.txt'
+      co2historicaldata_2015.txt: '{{ platform.fix_am }}/fix_co2_proj/global_co2historicaldata_2015.txt'
+      co2historicaldata_2016.txt: '{{ platform.fix_am }}/fix_co2_proj/global_co2historicaldata_2016.txt'
+      co2historicaldata_2017.txt: '{{ platform.fix_am }}/fix_co2_proj/global_co2historicaldata_2017.txt'
+      co2historicaldata_2018.txt: '{{ platform.fix_am }}/fix_co2_proj/global_co2historicaldata_2018.txt'
+      co2historicaldata_2019.txt: '{{ platform.fix_am }}/fix_co2_proj/global_co2historicaldata_2019.txt'
+      co2historicaldata_2020.txt: '{{ platform.fix_am }}/fix_co2_proj/global_co2historicaldata_2020.txt'
+      co2historicaldata_2021.txt: '{{ platform.fix_am }}/fix_co2_proj/global_co2historicaldata_2021.txt'
+      co2historicaldata_glob.txt: '{{ platform.fix_am }}/global_co2historicaldata_glob.txt'
+      co2monthlycyc.txt: '{{ platform.fix_am }}/co2monthlycyc.txt'
+      global_h2oprdlos.f77: '{{ platform.fix_am }}/global_h2o_pltc.f77'
+      global_albedo4.1x1.grb: '{{ platform.fix_am }}/global_albedo4.1x1.grb'
+      global_zorclim.1x1.grb: '{{ platform.fix_am }}/global_zorclim.1x1.grb'
+      global_tg3clim.2.6x1.5.grb: '{{ platform.fix_am }}/global_tg3clim.2.6x1.5.grb'
+      sfc_emissivity_idx.txt: '{{ platform.fix_am }}/global_sfc_emissivity_idx.txt'
+      solarconstant_noaa_an.txt: '{{ platform.fix_am }}/global_solarconstant_noaa_an.txt'
+      global_o3prdlos.f77: '{{ platform.fix_am }}/ozprdlos_2015_new_sbuvO3_tclm15_nuchem.f77'
+      CCN_ACTIVATE.BIN: '{{ platform.fix_am }}/CCN_ACTIVATE.BIN'
+      freezeH2O.dat: '{{ platform.fix_am }}/freezeH2O.dat'
+      qr_acr_qg.dat: '{{ platform.fix_am }}/qr_acr_qg.dat'
+      qr_acr_qgV2.dat: '{{ platform.fix_am }}/qr_acr_qgV2.dat'
+      qr_acr_qs.dat: '{{ platform.fix_am }}/qr_acr_qs.dat'
+      qr_acr_qsV2.dat: '{{ platform.fix_am }}/qr_acr_qsV2.dat'
+      Thompson_MP_MONTHLY_CLIMO.nc: '{{ platform.fix_am }}/Thompson_MP_MONTHLY_CLIMO.nc'
+      <optics_file>: !glob '{{ platform.fix_am }}/optics_*.dat'
+      <aeroclim_file>: !glob '{{ platform.fix_am }}/aeroclim.m*.nc'
+    lateral_boundary_conditions: 
       interval_hours: 1
       offset: 0
-      path: rrfs_a.t{{ timevars.hh}z.gfs_bndy.tile7.f{forecast_hour:03d}.nc
+      path: /scratch3/BMC/wrfruc/cholt/rrfs_work/input_data//lbcs/{{ timevars.yyyymmddhh }}_{forecast_hour:03d}/gfs.bndy.nc
     length: 6
     model_configure:
       update_values:
@@ -97,15 +111,58 @@ forecast_prod:
         itasks: 1
         quilting: true
         write_groups: 1
-        write_tasks_per_group: 2
+        write_tasks_per_group: 4
         num_files: 2
         filename_base: 'dyn phy'
         output_file: 'netcdf netcdf'
         output_fh: '1  -1'
         nsout: -1
         output_grid: lambert_conformal
+        cen_lon: -97.5
+        cen_lat: 38.5
+        stdlat1: 38.5
+        stdlat2: 38.5
+        nx: 420
+        ny: 252
+        dx: 13000.0
+        dy: 13000.0
     namelist:
       base_file: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfsx/v0.3.2/rrfs_conus_13km/input.nml
-    rundir: /scratch3/BMC/wrfruc/cholt/rrfs_work/stmp/rrfsx/v0.3.2//nwges/para/rrfs_a/{{ timevars.yyyymmddhh }}/fcst_fv3lam
-
-
+    rundir: /scratch3/BMC/wrfruc/cholt/rrfs_work/output/{{ timevars.yyyymmddhh }}/fcst
+  platform:
+    scheduler: slurm
+    account: wrfruc
+cycled_forecast:
+  fv3:
+    <<: *fv3_config
+    files_to_copy:
+      INPUT/fv_core.res.tile1.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/output/2025082712/fcst/RESTART/20250827.180000.fv_core.res.tile1.nc
+      INPUT/fv_srf_wnd.res.tile1.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/output/2025082712/fcst/RESTART/20250827.180000.fv_srf_wnd.res.tile1.nc
+      INPUT/fv_tracer.res.tile1.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/output/2025082712/fcst/RESTART/20250827.180000.fv_tracer.res.tile1.nc
+      INPUT/phy_data.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/output/2025082712/fcst/RESTART/20250827.180000.phy_data.nc
+      INPUT/sfc_data.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/output/2025082712/fcst/RESTART/20250827.180000.sfc_data.nc
+      INPUT/bk_coupler.res: /scratch3/BMC/wrfruc/cholt/rrfs_work/output/2025082712/fcst/RESTART/20250827.180000.coupler.res
+      INPUT/fv_core.res.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/output/2025082712/fcst/RESTART/20250827.180000.fv_core.res.nc
+      INPUT/gfs_ctrl.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/output/2025082712/fcst/INPUT/gfs_ctrl.nc
+      ufs.configure: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfs-workflow/parm/ufs.configure
+      fd_ufs.yaml: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfsx/v0.3.2/rrfs_conus_13km/fd_ufs.yaml
+    length: 3
+    lateral_boundary_conditions:
+      interval_hours: 1
+      offset: 1
+      path: /scratch3/BMC/wrfruc/cholt/rrfs_work/input_data//lbcs/2025082712_{forecast_hour:03d}/gfs.bndy.nc
+    namelist:
+      base_file: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfsx/v0.3.2/rrfs_conus_13km/input.nml
+      update_values:
+        fv_core_nml:
+          external_ic: false
+          make_nh: false
+          mountain: true
+          na_init: 0
+          nggps_ic: false
+          warm_start: true
+        gfs_physics_nml:
+          lsoil: 9
+  platform:
+    scheduler: slurm
+    account: wrfruc
