--- a/uw_configs/fv3_config.yaml
+++ b/uw_configs/fv3_config.yaml
@@ -1,17 +1,18 @@
 timevars:
+  pyyyymmddhh: '{{ (cycle - user.cycle_int).strftime("%Y%m%d%H") }}'
   yyyymmddhh: '{{ cycle.strftime("%Y%m%d%H") }}'
   hh: '{{ cycle.strftime("%H") }}'
 user:
-  rrfs_workflow_app: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfs-workflow
+  rrfs_workflow: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfs-workflow
   physics_suite: FV3_HRRR_gf
   cycle_int: !timedelta 1
 platform:
-  fix_lam: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfsx/v0.3.2/rrfs_conus_13km/fix_lam
-  fix_am: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfsx/v0.3.2/rrfs_conus_13km/fix_am
+  fix_lam: "{{ user.uw_training }}/FIX_RRFS/lam/RRFS_CONUS_13km"
+  fix_am: "{{ user.uw_training }}/FIX_RRFS/am"
 forecast_prod:
   fv3: &fv3_config
     diag_table:
-      template_file: "{{ user.rrfs_workflow_app }}/parm/diag_table.{{ user.physics_suite }}"
+      template_file: "{{ user.uw_training }}/parm/diag_table.{{ user.physics_suite }}"
       template_values:
         cres: C775
         starttime: !datetime "{{ cycle }}"
@@ -23,30 +24,30 @@ forecast_prod:
         walltime: "00:45:00"
       envcmds:
         - ulimit -s unlimited
-        - module use /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfs-workflow/modulefiles
+        - module use {{ user.rrfs_workflow }}/modulefiles
         - module load build_hera_intel
-      executable: "{{ user.rrfs_workflow_app }}/exec/ufs_model"
+      executable: "{{ user.rrfs_workflow }}/exec/ufs_model"
       mpiargs:
         - "--export=ALL"
         - "--mem=0"
       mpicmd: srun
       threads: 1
     field_table:
-      base_file: "{{ user.rrfs_workflow_app }}/parm/field_table.{{ user.physics_suite }}"
+      base_file: "{{ user.rrfs_workflow }}/parm/field_table.{{ user.physics_suite }}"
     files_to_copy: &files_to_copy
-      INPUT/gfs_ctrl.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/input_data/ics/gfs_ctrl.nc
-      INPUT/gfs_data.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/input_data/ics/out.atm.tile7.nc
-      INPUT/sfc_data.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/input_data/ics/out.sfc.tile7.nc
-      ufs.configure: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfs-workflow/parm/ufs.configure
-      fd_ufs.yaml: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfsx/v0.3.2/rrfs_conus_13km/fd_ufs.yaml
+      INPUT/gfs_ctrl.nc: "{{ user.uw_training }}/input_data/ics/gfs_ctrl.nc"
+      INPUT/gfs_data.nc: "{{ user.uw_training }}/input_data/ics/out.atm.tile7.nc"
+      INPUT/sfc_data.nc: "{{ user.uw_training }}/input_data/ics/out.sfc.tile7.nc"
+      ufs.configure: "{{ user.uw_training }}/parm/ufs.configure"
+      fd_ufs.yaml: "{{ user.uw_training }}/parm//fd_ufs.yaml"
     files_to_link:
-      INPUT/grid_spec.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfsx/v0.3.2/rrfs_conus_13km/fix_lam/C775_mosaic.halo3.nc
-      INPUT/grid.tile7.halo4.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfsx/v0.3.2/rrfs_conus_13km/fix_lam/C775_grid.tile7.halo4.nc
-      INPUT/C775_grid.tile7.halo3.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfsx/v0.3.2/rrfs_conus_13km/fix_lam/C775_grid.tile7.halo3.nc
-      INPUT/oro_data.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfsx/v0.3.2/rrfs_conus_13km/fix_lam/C775_oro_data.tile7.halo0.nc
-      INPUT/oro_data.tile7.halo4.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfsx/v0.3.2/rrfs_conus_13km/fix_lam/C775_oro_data.tile7.halo4.nc
-      INPUT/oro_data_ls.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfsx/v0.3.2/rrfs_conus_13km/fix_lam/C775_oro_data_ls.tile7.halo0.nc
-      INPUT/oro_data_ss.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfsx/v0.3.2/rrfs_conus_13km/fix_lam/C775_oro_data_ss.tile7.halo0.nc
+      INPUT/grid_spec.nc: "{{ platform.fix_lam }}/C775_mosaic.halo3.nc"
+      INPUT/grid.tile7.halo4.nc: "{{ platform.fix_lam }}/C775_grid.tile7.halo4.nc"
+      INPUT/C775_grid.tile7.halo3.nc: "{{ platform.fix_lam }}/C775_grid.tile7.halo3.nc"
+      INPUT/oro_data.nc: "{{ platform.fix_lam }}/C775_oro_data.tile7.halo0.nc"
+      INPUT/oro_data.tile7.halo4.nc: "{{ platform.fix_lam }}/C775_oro_data.tile7.halo4.nc"
+      INPUT/oro_data_ls.nc: "{{ platform.fix_lam }}/C775_oro_data_ls.tile7.halo0.nc"
+      INPUT/oro_data_ss.nc: "{{ platform.fix_lam }}/C775_oro_data_ss.tile7.halo0.nc"
       aerosol.dat: '{{ platform.fix_am }}/global_climaeropac_global.txt'
       co2historicaldata_2010.txt: '{{ platform.fix_am }}/fix_co2_proj/global_co2historicaldata_2010.txt'
       co2historicaldata_2011.txt: '{{ platform.fix_am }}/fix_co2_proj/global_co2historicaldata_2011.txt'
@@ -81,8 +82,8 @@ forecast_prod:
     lateral_boundary_conditions: 
       interval_hours: 1
       offset: 0
-      path: /scratch3/BMC/wrfruc/cholt/rrfs_work/input_data//lbcs/{{ timevars.yyyymmddhh }}_{forecast_hour:03d}/gfs.bndy.nc
-    length: 6
+      path: "{{ user.uw_training }}/input_data/lbcs/{{ timevars.yyyymmddhh }}_{forecast_hour:03d}/gfs.bndy.nc"
+    length: 3
     model_configure:
       update_values:
         start_year: !int '{{ cycle.year }}'
@@ -91,14 +92,14 @@ forecast_prod:
         start_hour: !int '{{ cycle.hour }}'
         start_minute: !int '{{ cycle.minute }}'
         start_second: !int '{{ cycle.second }}'
-        nhours_fcst: 6
+        nhours_fcst: !int '{{ forecast_prod.fv3.length }}'
         fhrot: 0
         run_continue: false
         ens_sps: false
         dt_atmos: 120
         calendar: julian
         memuse_verbose: false
-        restart_interval: 0
+        restart_interval: 1
         output_1st_tstep_rst: false
         write_dopost: false
         ideflate: 0
@@ -127,8 +128,8 @@ forecast_prod:
         dx: 13000.0
         dy: 13000.0
     namelist:
-      base_file: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfsx/v0.3.2/rrfs_conus_13km/input.nml
-    rundir: /scratch3/BMC/wrfruc/cholt/rrfs_work/output/{{ timevars.yyyymmddhh }}/fcst
+      base_file: "{{ user.uw_training }}/parm/input.nml"
+    rundir: "{{ user.expt_dir }}/{{ timevars.yyyymmddhh }}/fcst"
   platform:
     scheduler: slurm
     account: wrfruc
@@ -136,23 +137,23 @@ cycled_forecast:
   fv3:
     <<: *fv3_config
     files_to_copy:
-      INPUT/fv_core.res.tile1.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/output/2025082712/fcst/RESTART/20250827.180000.fv_core.res.tile1.nc
-      INPUT/fv_srf_wnd.res.tile1.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/output/2025082712/fcst/RESTART/20250827.180000.fv_srf_wnd.res.tile1.nc
-      INPUT/fv_tracer.res.tile1.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/output/2025082712/fcst/RESTART/20250827.180000.fv_tracer.res.tile1.nc
-      INPUT/phy_data.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/output/2025082712/fcst/RESTART/20250827.180000.phy_data.nc
-      INPUT/sfc_data.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/output/2025082712/fcst/RESTART/20250827.180000.sfc_data.nc
-      INPUT/bk_coupler.res: /scratch3/BMC/wrfruc/cholt/rrfs_work/output/2025082712/fcst/RESTART/20250827.180000.coupler.res
-      INPUT/fv_core.res.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/output/2025082712/fcst/RESTART/20250827.180000.fv_core.res.nc
-      INPUT/gfs_ctrl.nc: /scratch3/BMC/wrfruc/cholt/rrfs_work/output/2025082712/fcst/INPUT/gfs_ctrl.nc
-      ufs.configure: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfs-workflow/parm/ufs.configure
-      fd_ufs.yaml: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfsx/v0.3.2/rrfs_conus_13km/fd_ufs.yaml
+      INPUT/fv_core.res.tile1.nc: "{{ user.expt_dir }}/{{ timevars.pyyyymmddhh }}/fcst/RESTART/{{ timevars.yyyymmdd }}.{{ timevars.hh }}.fv_core.res.tile1.nc"
+      INPUT/fv_srf_wnd.res.tile1.nc: "{{ user.expt_dir }}/{{ timevars.pyyyymmddhh }}/fcst/RESTART/{{ timevars.yyyymmdd }}.{{ timevars.hh }}.fv_srf_wnd.res.tile1.nc"
+      INPUT/fv_tracer.res.tile1.nc: "{{ user.expt_dir }}/{{ timevars.pyyyymmddhh }}/fcst/RESTART/{{ timevars.yyyymmdd }}.{{ timevars.hh }}.fv_tracer.res.tile1.nc"
+      INPUT/phy_data.nc: "{{ user.expt_dir }}/{{ timevars.pyyyymmddhh }}/fcst/RESTART/{{ timevars.yyyymmdd }}.{{ timevars.hh }}.phy_data.nc"
+      INPUT/sfc_data.nc: "{{ user.expt_dir }}/{{ timevars.pyyyymmddhh }}/fcst/RESTART/{{ timevars.yyyymmdd }}.{{ timevars.hh }}.sfc_data.nc"
+      INPUT/bk_coupler.res: "{{ user.expt_dir }}/{{ timevars.pyyyymmddhh }}/fcst/RESTART/{{ timevars.yyyymmdd }}.{{ timevars.hh }}.coupler.res"
+      INPUT/fv_core.res.nc: "{{ user.expt_dir }}/{{ timevars.pyyyymmddhh }}/fcst/RESTART/{{ timevars.yyyymmdd }}.{{ timevars.hh }}.fv_core.res.nc"
+      INPUT/gfs_ctrl.nc: "{{ user.expt_dir }}/{{ timevars.pyyyymmddhh }}/fcst/INPUT/gfs_ctrl.nc"
+      ufs.configure: "{{ user.uw_training }}/parm/ufs.configure"
+      fd_ufs.yaml: "{{ user.uw_training }}/parm//fd_ufs.yaml"
     length: 3
     lateral_boundary_conditions:
       interval_hours: 1
       offset: 1
-      path: /scratch3/BMC/wrfruc/cholt/rrfs_work/input_data//lbcs/2025082712_{forecast_hour:03d}/gfs.bndy.nc
+      path: "{{ user.uw_training }}/input_data/lbcs/{{ timevars.yyyymmddhh }}_{forecast_hour:03d}/gfs.bndy.nc"
     namelist:
-      base_file: /scratch3/BMC/wrfruc/cholt/rrfs_work/rrfsx/v0.3.2/rrfs_conus_13km/input.nml
+      base_file: "{{ user.uw_training }}/parm/input.nml"
       update_values:
         fv_core_nml:
           external_ic: false
